# fifo2db

./: .gitignore  Cargo.toml  README.md
src/: main.rs
