[package]
name = "fifo2db"
version = "0.1.0"
authors = ["Diogo Mattioli <diogomattioli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#postgres = "*"
mysql = "*"

[profile.release]
debug = false
opt-level = 3
#opt-level = 'z'  # Optimize for size.
#lto = true
#codegen-units = 1
#panic = 'abort'
