[package]
name = "fifo2db"
version = "0.1.0"
authors = ["Diogo Mattioli <diogomattioli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"

[profile.release]
debug = false
opt-level = 3
lto = true
panic = 'abort'
